--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myfarm",
   "version": "0.1.0",
+  "homepage":"https://Tnzjalali.github.io/PRjafaro",
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -98,8 +99,8 @@
     "yup": "0.32.9"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -124,6 +125,7 @@
   },
   "devDependencies": {
     "css-loader": "4.3.0",
+    "gh-pages": "^5.0.0",
     "style-loader": "1.3.0"
   },
   "jest": {
